--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -31,7 +31,6 @@ html {
     font-size: 100%;
 }
 
-/* Box sizing */
 *,
 *::before,
 *::after {
@@ -54,7 +53,6 @@ ul , li {
     list-style: none;
 }
 
-/* Reset margins */
 body,
 h1,
 h2,
@@ -67,14 +65,12 @@ picture {
     margin: 0; 
 }
 
-/* make images easier to work */
 img,
 picutre {
     max-width: 100%;
     display: block;
 }
 
-/* make form elements easier to work */
 input,
 button,
 textarea,
@@ -82,15 +78,14 @@ select {
     font: inherit;
 }
 
-
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: 'droid';
     font-weight: 700;
     color: rgb(var(--primary-color));
 }
 
-.h1 {
-    font-size: 50px;
+h1, .h1 {
+    font-size: 68px;
     line-height: 1.2;
 }
 
@@ -205,7 +200,7 @@ a:focus {
 }
 
 .bg-primary {
-    background: rgb(var(--primary-color)) !important;
+    background: rgb(var(--bg-color)) !important;
 }
 
 .bg-secondary {
@@ -228,34 +223,6 @@ a:focus {
 .text-gray a:not(.btn),
 .text-gray {
     color: #54565A !important;
-}
-
-.text-light a:not(.btn),
-.text-light {
-    color: #ffffff !important;
-}
-
-.text-dark a:not(.btn),
-.text-dark {
-    color: #333333 !important;
-}
-
-a.text-primary:hover,
-a.text-primary:focus,
-.text-primary {
-    color: rgb(var(--primary-color)) !important;
-}
-
-a.text-brand:hover,
-a.text-brand:focus,
-.text-brand {
-    color: rgb(var(--brand-color)) !important;
-}
-
-a.text-secondary:hover,
-a.text-secondary:focus,
-.text-secondary {
-    color: rgb(var(--secondary-color)) !important;
 }
 
 
@@ -284,6 +251,13 @@ a.text-secondary:focus,
     font-weight: 900 !important;
 }
 
+.fs-14 {
+    font-size: 14px;
+}
+
+.fs-16 {
+    font-size: 16px;
+}
 
 
 /*Buttons*/
@@ -295,11 +269,11 @@ a.text-secondary:focus,
     line-height: 1.2;
     font-weight: 600;
     position: relative;
-    padding: 16px 35px;
+    padding: 12px 26px;
     border-radius: 5px;
-    min-width: 190px;
-    color: rgb(var(--brand-color));
-    background: transparent;
+    min-width: 180px;
+    color: #fff;
+    background: rgb(var(--brand-color));
     border: 2px solid rgb(var(--brand-color));
     transition: .5s;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
